# StartRender

./: .gitignore  CMakeLists.txt  dev.md  readme.md  version.rc
lib/old/: EventManager.cpp  EventManager.h  MainWindow.h  RenderFrame.cpp  RenderFrame.h
src/: Gui.cpp  Gui.h  MainWindow.cpp  MainWindow.h  main.cpp
src/engine/: Camera.h  Config.h  Context.cpp  Context.h  EventManager.cpp  EventManager.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Object3D.cpp  Object3D.h  Render.cpp  Render.h  RenderEngine.cpp  RenderEngine.h  RenderFrame.cpp  RenderFrame.h  RenderState.cpp  RenderState.h  RenderThread.cpp  RenderThread.h  Util.cpp  Util.h  Viewing.cpp  Viewing.h
src/engine/data/: Camera.h  Context.cpp  Context.h  ContextCache.h  CubeMap.h  Environment.h  GBuffer.h  Object.h  SceneData.h  Texture.h  TextureMap.h  VertexAttribute.h
src/engine/platform/: SIMDUtil.cpp
src/engine/render/: Camera.cpp  GltfFile.cpp  Scene.cpp  Util.cpp
src/engine/shader/: ColorShader.cpp  ColorShader.h  FragmentShader.cpp  FragmentShader.h  RasterizationShader.cpp  RasterizationShader.h  VertexShader.cpp  VertexShader.h
src/event/: Camera.cpp  Camera.h  EventManager.cpp  EventManager.h
src/include/: Camera.h  CameraController.h  ContextCache.h  Environment.h  GltfFile.h  LightParam.h  Render.h  Scene.h  Util.h  type.h
src/math/: Math.cpp  Math.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
src/object/: GltfFile.cpp  GltfFile.h  Object3D.cpp  Object3D.h  ObjectFile.cpp  ObjectFile.h  ObjectOperator.cpp  ObjectOperator.h
src/old/: MainWindow.cpp
src/platform/: SIMDUtil.cpp  SIMDUtil.h  def.h
src/public/: Accessor.cpp  Accessor.h  Camera.cpp  LightParam.cpp  Util.cpp
src/render/: Accessor.cpp  Accessor.h  Camera.cpp  GltfFile.cpp  ImageTool.cpp  ImageTool.h  LightParam.cpp  Scene.cpp  Util.cpp
src/test/: float_test.h  pngtest.cpp  pngtest.h  simd.h  test.cpp
src/type/: type.h
src/viewing/: Viewing.cpp  Viewing.h
